@@ -65,37 +65,13 @@ docs = [
 coverage = ">=7.4.4,<8.0.0"
 pylint = ">=3.0.1,<4.0.0"
 pre-commit = ">=4.0.1,<5.0.0"
-black = ">=24.2.0,<25.0.0"
-isort = ">=5.12.0,<6.0.0"
 colorama = ">=0.4.6,<1.0.0"
+ruff = "^0.12.10"
 
 [tool.poetry.scripts]
 cback3 = 'CedarBackup3.scripts:cback3' 
 cback3-amazons3-sync = 'CedarBackup3.scripts:amazons3' 
 cback3-span = 'CedarBackup3.scripts:span' 
-
-[tool.black]
-line-length = 132
-target-version = [ 'py310', 'py311', 'py312', 'py313' ]
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | __pycache__
-  | \.tox
-  | \.venv
-  | \.poetry
-  | build
-  | dist
-  | docs
-  | notes
-)/
-'''
-
-[tool.isort]
-profile = "black"
-line_length = 132
-skip_glob = [ "docs", "notes", ".poetry" ]
 
 [tool.coverage.paths]
 source = [ "src" ]
@@ -107,3 +83,14 @@ source = [ "src/CedarBackup3" ]
 [tool.coverage.report]
 show_missing = false
 precision = 1
+
+[tool.ruff]
+src = ["src"]
+extend-exclude = [ "docs", "notes", ".poetry" ]
+line-length = 132
+preview = true
+
+[tool.ruff.format]
+quote-style = "double"
+line-ending = "lf"
+docstring-code-format = false
